<resources>
    <string name="app_name">videotogether</string>
    <string name="app_title">VIDEO TOGETHER</string>

    <!--  쉐어드 키값  -->
    <string name="firebase_messaging_token">firebaseMessageToken</string>
    <string name="auto_sign_in_key">isAutoSignIn</string>
    <string name="is_app_on">isAppOn</string>
    <string name="current_chat_room_id">currentChatRoomId</string>

    <!--  네비게이션 카테고리  -->
    <string name="friend">친구</string>
    <string name="chat">채팅</string>
    <string name="youtube">유투브</string>
    <string name="notice">알림</string>

    <!--  상단 앱 바 카테고리  -->
    <string name="youtube_search">유투브 검색</string>
    <string name="search">검색</string>
    <string name="add_friend">친구 추가</string>
    <string name="add_chat_room">채팅방 추가</string>

    <!--  유저 관련  -->
    <string name="name">이름</string>
    <string name="sign_up">회원가입</string>
    <string name="sign_in">로그인</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="passwordCheck">비밀번호 확인</string>
    <string name="greeting">VIDEO TOGETHER에 오신 것을 환영합니다.\n회원가입을 진행해 주세요.</string>
    <string name="email_invalid">이메일 형식에 맞지 않습니다</string>
    <string name="email_duplicated">중복된 이메일 입니다</string>
    <string name="email_check_loading">중복 체크 중…</string>
    <string name="password_validation">8~16자 영문 대 소문자, 숫자, 특수문자를 사용하세요</string>
    <string name="valid">사용가능 합니다</string>
    <string name="check_password">비밀번호를 확인해주세요</string>
    <string name="password_check_invalid">비밀번호와 일치하지 않습니다</string>
    <string name="check_email">이메일을 확인해주세요</string>
    <string name="chang_profile">프로필 변경</string>
    <string name="set_profile">프로필을 설정해보세요</string>
    <string name="input_name">이름을 입력해주세요</string>
    <string name="check_email_or_password">이메일 혹은 비밀번호를 확인해주세요</string>
    <string name="sign_up_confirm">가입 완료</string>

    <!--  친구 관련  -->
    <string name="friend_list">친구목록</string>
    <string name="search_by_email">이메일 주소로 검색</string>
    <string name="search_by_name">이름으로 검색</string>
    <string name="input_user_email">사용자 이메일을 입력해주세요</string>

    <!--  채팅 관련  -->
    <string name="p2p_chat">1:1채팅</string>
    <string name="chat_message">채팅 메시지</string>

    <!--  유투브 관련  -->
    <string name="search_by_youtube">YouTube 채널로 검색</string>

    <!--  기타  -->
    <string name="loading">Loading…</string>
    <string name="text_count_20">0/20</string>
    <string name="check">확인</string>
    <string name="message_time">메시지 시간</string>
    <string name="watch_together">같이 보기</string>
    <string name="auto_sign_in">자동로그인</string>
    <string name="search_by_chat_room">채팅방 이름</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat_room">채팅방</string>
    <string name="confirm">확인</string>
</resources>