<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/friendsListFragment"
        android:icon="@drawable/ic_baseline_person_24"
        android:orderInCategory="1"
        android:title="@string/friend_list"
        app:showAsAction="always" />

    <item
        android:id="@+id/chatListFragment"
        android:icon="@drawable/ic_baseline_chat_24"
        android:orderInCategory="2"
        android:title="@string/chat"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/youtubeFragment"
        android:icon="@drawable/ic_baseline_video_library_24"
        android:orderInCategory="2"
        android:title="@string/youtube"
        app:showAsAction="ifRoom" />
</menu>