<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/search"
        android:title="@string/search"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/youtubeSearchFragment"
        android:icon="@drawable/youtube_search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/addFriendFragment"
        android:icon="@drawable/ic_baseline_person_add_24"
        android:title="@string/add_friend"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/addChatRoomFragment"
        android:icon="@drawable/chat_add"
        android:title="@string/add_chat_room"
        app:showAsAction="ifRoom" />
</menu>