<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5sp">

    <androidx.cardview.widget.CardView
        android:id="@+id/profileCV"
        android:layout_width="45dp"
        android:layout_height="45dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/profileIV"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline_person_24" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/nameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/messageTV"
        app:layout_constraintLeft_toRightOf="@id/profileCV"
        app:layout_constraintTop_toTopOf="@id/profileCV" />

    <TextView
        android:id="@+id/messageTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/shape_rounded_10dp"
        android:backgroundTint="@color/lightBackground"
        android:padding="10dp"
        android:text="@string/chat"
        android:textColor="@color/white"
        app:layout_constraintLeft_toRightOf="@id/profileCV"
        app:layout_constraintTop_toBottomOf="@+id/nameTV" />

    <TextView
        android:id="@+id/messageTimeTV"
        style="@style/SmallTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/message_time"
        app:layout_constraintBottom_toBottomOf="@id/messageTV"
        app:layout_constraintLeft_toRightOf="@id/messageTV" />
</androidx.constraintlayout.widget.ConstraintLayout>