<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.nestonmain.SetProfileFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="300dp">

            <TextView
                android:id="@+id/profileNotificationTV"
                style="@style/LargeTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:text="@string/set_profile"
                app:layout_constraintBottom_toTopOf="@id/profileContainerCV"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <androidx.cardview.widget.CardView
                android:id="@+id/profileContainerCV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                app:cardCornerRadius="30dp"
                app:layout_constraintBottom_toTopOf="@id/nameET"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profileNotificationTV">

                <ImageView
                    android:id="@+id/profileIV"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_baseline_account_box_24" />

            </androidx.cardview.widget.CardView>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_circle"
                android:backgroundTint="@color/white"
                android:elevation="2sp"
                android:src="@drawable/ic_baseline_photo_camera_24"
                app:layout_constraintBottom_toBottomOf="@id/profileContainerCV"
                app:layout_constraintRight_toRightOf="@id/profileContainerCV" />

            <TextView
                android:id="@+id/nameTextCountTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/text_count_20"
                app:layout_constraintBottom_toTopOf="@id/nameET"
                app:layout_constraintRight_toRightOf="@id/nameET" />

            <EditText
                android:id="@+id/nameET"
                style="@style/MainEditTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:hint="@string/input_name"
                android:maxLength="20"
                app:layout_constraintBottom_toTopOf="@id/confirmBtn"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profileContainerCV" />

            <ImageButton
                android:id="@+id/clearNameIB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_clear_24"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/nameET"
                app:layout_constraintRight_toRightOf="@id/nameET"
                app:layout_constraintTop_toTopOf="@id/nameET" />

            <Button
                android:id="@+id/confirmBtn"
                style="@style/MainButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/sign_up_confirm"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nameET" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>